packages/components/src/FormField/FormField.css
:root {
  /**
   * These `--public-field` properties are used in other components such
   * as InputGroup, therefore they must stay on :root
   **/
  --public-field--top-left-radius: var(--radius-base);
  --public-field--top-right-radius: var(--radius-base);
  --public-field--bottom-left-radius: var(--radius-base);
  --public-field--bottom-right-radius: var(--radius-base);
}

/**
 * Wrapper
 **/
.wrapper {
  --field--placeholder-color: var(--color-greyBlue--light);
  --field--placeholder-offset: 50%;
  --field--placeholder-transform: -50%;

  --field--textAlign: left;

  --field--height: var(--space-largest);

  --field--padding-top: calc(var(--space-base) - var(--space-smallest));
  --field--padding-bottom: calc(var(--space-base) - var(--space-smallest));
  --field--padding-left: var(--space-base);
  --field--padding-right: var(--space-base);

  --field--value-color: var(--color-heading);
  --field--value-lineHeight: calc(var(--base-unit) * 1.25);

  --field--border-color: var(--color-border);
  --field--background-color: var(--color-surface);

  --field--base-elevation: var(--elevation-base);
  --field--label-elevation: calc(var(--field--base-elevation) + 1);
  --field--postfix-elevation: calc(var(--field--base-elevation) - 1);
  --field--postfix-action-elevation: calc(var(--field--base-elevation) + 2);

  display: flex;
  width: 100%;
  height: var(--field--height);
  border: var(--border-base) solid var(--field--border-color);
  border-radius: var(--radius-base);
  border-top-right-radius: var(--public-field--top-right-radius);
  border-bottom-right-radius: var(--public-field--bottom-right-radius);
  border-bottom-left-radius: var(--public-field--bottom-left-radius);
  border-top-left-radius: var(--public-field--top-left-radius);
  color: var(--field--value-color);
  font-size: var(--typography--fontSize-base);
  background-color: var(--field--background-color);
}

.wrapper * {
  box-sizing: border-box;
}

.wrapper:focus-within {
  position: relative;
  z-index: var(--field--base-elevation);
  box-shadow: var(--shadow-focus);
}

.miniLabel {
  --field--label-elevation: calc(var(--field--base-elevation) - 1);
  --field--placeholder-color: var(--color-text--secondary);
  --field--placeholder-offset: var(--space-smallest);
  --field--placeholder-transform: 0;
}

.wrapper.textarea {
  height: auto;
  min-height: auto;
}

.invalid,
.invalid:focus-within {
  --field--border-color: var(--color-critical);
}

.disabled {
  --field--placeholder-color: var(--color-disabled);
  --field--value-color: var(--color-disabled);
  --field--background-color: var(--color-surface--background);
  --field--border-color: var(--color-disabled--secondary);
}

/* override iOS default styling for disabled input */
.disabled :disabled {
  -webkit-text-fill-color: var(--field--value-color);
  opacity: 1;
}

.small {
  --field--padding-left: calc(var(--space-base) - var(--space-smaller));
  --field--padding-right: calc(var(--space-base) - var(--space-smaller));
  --field--height: calc(var(--space-larger) + var(--space-smaller));
}

.large {
  --field--padding-left: var(--space-large);
  --field--padding-right: var(--space-large);
  --field--height: calc(var(--space-extravagant));
}

.inline {
  display: inline-flex;
  width: auto;
}

.center {
  --field--textAlign: center;
}

.right {
  --field--textAlign: right;
}

/**
 * The custom property --formField-maxLength is getting defined inside the
 * component.
 */
.maxLength {
  width: calc(
    (var(--base-unit) * var(--formField-maxLength)) + var(--field--padding-left) +
      var(--field--padding-right)
  );
}

/**
 * Input Wrapper
 **/
.inputWrapper {
  display: flex;
  flex: 1;
  position: relative;
}

/**
 * Input
 **/
.input {
  position: relative;
  z-index: var(--field--base-elevation);
  width: 100%;
  padding-top: var(--field--padding-top);
  padding-bottom: var(--field--padding-bottom);
  padding-left: var(--field--padding-left);
  padding-right: var(--field--padding-right);
  border: none;
  border-radius: 0;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  line-height: var(--field--value-lineHeight);
  text-align: var(--field--textAlign);
  background: transparent;
  appearance: none;
}

.input:focus {
  outline: none;
}

.miniLabel .input {
  --field--padding-top: calc(var(--space-base) + var(--space-smaller));
  --field--padding-bottom: var(--space-small);
}

.textarea .input {
  resize: vertical;
}

.small .input {
  --field--padding-top: var(--space-small);
  --field--padding-bottom: var(--space-small);
}

.select .input {
  --field--padding-top: 0;
  --field--padding-bottom: 0;
}

.miniLabel.select:not(.small) .input {
  --field--padding-top: var(--space-small);
}

/**
 * Label
 **/
.label {
  position: absolute;
  top: var(--field--placeholder-offset);
  z-index: var(--field--label-elevation);
  width: 100%;
  padding-left: var(--field--padding-left);
  padding-right: var(--field--padding-right);
  overflow: hidden;
  color: var(--field--placeholder-color);
  line-height: var(--field--value-lineHeight);
  text-align: var(--field--textAlign);
  text-overflow: ellipsis;
  white-space: nowrap;
  transform: translateY(var(--field--placeholder-transform));
  transition: all var(--timing-quick);
}

.miniLabel .label {
  font-size: var(--typography--fontSize-small);
}

.textarea .label {
  top: var(--field--padding-top);
  transform: translateY(0);
}

.textarea.miniLabel .label {
  top: var(--space-smallest);
}

.small.miniLabel .label {
  display: none;
}

.large.miniLabel .label {
  top: var(--space-small);
}

/**
 * Postfix
 **/
.postfix {
  position: absolute;
  top: 50%;
  right: var(--space-base);
  z-index: var(--field--postfix-elevation);
  transform: translateY(-50%);
}

/**
 * Affix
 **/

.affixIcon {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 calc(var(--field--padding-left) * -1) 0 0;
  padding: 0 var(--field--padding-right) 0 var(--field--padding-left);
}

@supports (aspect-ratio: 1/1) {
  .affixIcon {
    /*
     * disabling property-no-unknown here as this is a real property
     * that stylelint just doesn't know about. We may be able to remove
     * this when we update our stylelint to not care about IE11.
     */
    /* stylelint-disable-next-line property-no-unknown */
    aspect-ratio: 1/1;
    padding: 0;
  }
}

.affixIcon.suffix {
  margin: 0 0 0 calc(var(--field--padding-right) * -1);
}

.affixIcon.hasAction {
  position: relative;
  z-index: var(--field--postfix-action-elevation);
}

.affixLabel {
  display: flex;
  margin: 0 calc((var(--field--padding-left) - var(--space-smallest)) * -1) 0 0;
  padding: 0 0 0 var(--field--padding-left);
  line-height: var(--field--value-lineHeight);
  align-items: center;
  flex: 0 0 auto;
}

.affixLabel.suffix {
  margin: 0 0 0 calc((var(--field--padding-left) - var(--space-smallest)) * -1);
  padding: 0 var(--field--padding-left) 0 0;
}

.miniLabel:not(.small) .affixLabel {
  padding-top: calc(var(--field--padding-top) - 2px);
}

.description {
  margin-top: var(--space-smaller);
}

